--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,17 +61,18 @@
 /* ----------------------BUTTONS---------------------- */
 
 .btn-warning,
-.btn-primary:hover,
-.btn-primary:active,
-.btn-primary:visited,
-.btn-primary:focus {
+.btn-:hover,
+.btn-warning:active,
+.btn-warning:visited,
+.btn-warning:focus {
   background-color: var(--mustard) !important;
   border-color: var(--mustard) !important;
   color: var(--darkbrown);
 }
 
-.btn-primary:hover {
-  background-color: var(--mustard) !important;
+.btn-warning:hover {
+  background-color: #d4aa48 !important;
+  border-color: #d4aa48 !important;
   transition: all 1s ease;
   -webkit-transition: all 1s ease;
   -moz-transition: all 1s ease;
@@ -94,10 +95,15 @@
 
 .servicesHeader {
   font-family: "Montserrat", sans-serif;
-
   color: var(--mustard);
 }
 
 .open-sans {
   font-family: "Open Sans", sans-serif;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 17vw;
+  object-fit: cover;
 }
