--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,23 @@
   --mustard: #cb9a28;
 }
 
-/* ::selection {
-  } */
+/*--------------fonts------------ */
+
+.open-sans {
+  font-family: "Open Sans", sans-serif;
+}
+
+.gar {
+  font-family: "Cormorant Garamond", sans-serif;
+}
+
+.merri {
+  font-family: "Merriweather", serif;
+}
+
+.mons {
+  font-family: "Montserrat", sans-serif;
+}
 
 /* ----------------------NAVBAR---------------------- */
 .navbar {
@@ -102,7 +117,7 @@
 /* SERVICES */
 
 .services {
-  background: var(--lightgrey);
+  background: rgb(68, 68, 68);
   color: white;
 }
 
@@ -111,22 +126,16 @@
   color: var(--mustard);
 }
 
-.open-sans {
-  font-family: "Open Sans", sans-serif;
-}
-
 .card {
   border-radius: 0;
+  height: 20vw;
 }
 
 .card-img-top {
   width: 100%;
   height: 20vw;
   object-fit: cover;
-}
-
-.card-body {
-  background-color: var(--mustard);
+  border-radius: 0;
 }
 
 .card-title {
@@ -134,4 +143,10 @@
   text-align: center !important;
   display: block;
   line-height: normal;
+}
+
+.overlay {
+  /* background: rgb(30, 30, 30); */
+  background: var(--mustard);
+  opacity: 80%;
 }
