--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,8 +200,14 @@
 
 .footer-links {
   color: white;
+  border-color: #fff;
 }
 
 .footer-links:hover {
-  color: var(--mustard);
+  color: var(--mustard) !important;
+  border-color: var(--mustard);
+}
+
+.colorize-pink {
+  filter: brightness(0.5) sepia(1) hue-rotate(-70deg) saturate(5);
 }
